tests/derive_ref/fails/mutmethods.stderr
error: cannot derive `Ref` for a trait declaring `&mut self` methods
 --> $DIR/mutmethods.rs:7:18
  |
7 |     fn increment(&mut self);
  |                  ^^^^^^^^^
